# pip_magic

./: Readme.md  flit.ini  pyproject.toml
pip_magic/: .__init__.py.swp  .__init__.py.un~  __init__.py
